--- a/Kconfig
+++ b/Kconfig
@@ -5,4 +5,8 @@
 #
 mainmenu "Linux/$(ARCH) $(KERNELVERSION) Kernel Configuration"
 
+comment "Compiler: $(CC_VERSION_TEXT)"
+
+source "scripts/Kconfig.include"
+
 source "arch/$(SRCARCH)/Kconfig"
