--- a/.gitignore
+++ b/.gitignore
@@ -133,3 +133,7 @@ drivers/platform/msm/ipa/ipa_common
 
 # Sony defconfig
 arch/arm64/configs/sony
+
+# wireguard
+drivers/net/wireguard/crypto/zinc/chacha20/chacha20-arm64.S
+drivers/net/wireguard/crypto/zinc/poly1305/poly1305-arm64.S
