--- a/arch/arm64/configs/msm8998_oneplus_android_defconfig
+++ b/arch/arm64/configs/msm8998_oneplus_android_defconfig
@@ -302,6 +302,7 @@ CONFIG_DM_ANDROID_VERITY=y
 CONFIG_DM_BOW=y
 CONFIG_NETDEVICES=y
 CONFIG_DUMMY=y
+CONFIG_WIREGUARD=y
 CONFIG_MACVLAN=y
 CONFIG_MACVTAP=y
 CONFIG_IPVLAN=y
