--- a/arch/arm64/configs/msm8998_oneplus_android_defconfig
+++ b/arch/arm64/configs/msm8998_oneplus_android_defconfig
@@ -867,3 +867,6 @@ CONFIG_SND_SOC_DIGITAL_CDC=y
 CONFIG_SND_SOC_MSM_SDW=y
 CONFIG_SND_SOC_MSM_HDMI_CODEC_RX=y
 CONFIG_SND_SOC_MSM8998=y
+# CONFIG_DEBUG_PREEMPT is not set
+CONFIG_IPC_LOGGING=y
+CONFIG_SW_SYNC=y
