--- a/arch/arm64/configs/msm8998_oneplus_android_defconfig
+++ b/arch/arm64/configs/msm8998_oneplus_android_defconfig
@@ -867,3 +867,5 @@ CONFIG_SND_SOC_DIGITAL_CDC=y
 CONFIG_SND_SOC_MSM_SDW=y
 CONFIG_SND_SOC_MSM_HDMI_CODEC_RX=y
 CONFIG_SND_SOC_MSM8998=y
+CONFIG_SCHEDSTATS=y
+CONFIG_BLK_DEV_IO_TRACE=y
