arm64: configs: msm8998: enable mode BPF configs
- CONFIG_NET_ACT_BPF
- CONFIG_BPF_STREAM_PARSER

Signed-off-by: Roberto Sartori <roberto.sartori.android@gmail.com>

--- a/arch/arm64/configs/msm8998_oneplus_android_defconfig
+++ b/arch/arm64/configs/msm8998_oneplus_android_defconfig
@@ -250,11 +250,13 @@ CONFIG_NET_EMATCH_U32=y
 CONFIG_NET_EMATCH_META=y
 CONFIG_NET_EMATCH_TEXT=y
 CONFIG_NET_CLS_ACT=y
+CONFIG_NET_ACT_BPF=y
 CONFIG_NET_L3_MASTER_DEV=y
 CONFIG_QRTR=y
 CONFIG_QRTR_SMD=y
 CONFIG_QRTR_FIFO=y
 CONFIG_BPF_JIT=y
+CONFIG_BPF_STREAM_PARSER=y
 CONFIG_BT=y
 CONFIG_MSM_BT_POWER=y
 CONFIG_CFG80211=y
