--- a/arch/arm64/configs/msm8998_oneplus_android_defconfig
+++ b/arch/arm64/configs/msm8998_oneplus_android_defconfig
@@ -100,8 +100,11 @@ CONFIG_CPU_FREQ=y
 CONFIG_CPU_FREQ_STAT=y
 CONFIG_CPU_FREQ_TIMES=y
 CONFIG_CPU_FREQ_DEFAULT_GOV_SCHEDUTIL=y
+CONFIG_CPU_FREQ_GOV_POWERSAVE=y
+CONFIG_CPU_FREQ_GOV_CONSERVATIVE=y
 CONFIG_SCHEDUTIL_UP_RATE_LIMIT=500
 CONFIG_SCHEDUTIL_DOWN_RATE_LIMIT=20000
+CONFIG_CPU_FREQ_GOV_INTERACTIVE=y
 CONFIG_CPU_FREQ_MSM=y
 CONFIG_NET=y
 CONFIG_PACKET=y
